<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_facebook_messenger_blue"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="app.makesoft.onepost.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/bienvenido_a_onepost"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/crea_tus_publicaciones"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/redacta_y_sube_tus_imagenes_o_videos_crea_tus_publicaciones_en_un_solo_lugar"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="34dp"
        android:text="@string/comparte_en_facebook"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/una_sola_publicacion_destinos_ilimitados_crea_y_comparte_desde_onepost_y_tu_publicaciones_se_enviaran_masivamente_a_los_grupos_y_paginas_que_selecciones."
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <TextView

        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/PRUEBA_PRO_GRATUITA"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView

        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prueba_una_cuenta_pro_durante_30_dias_de_forma_gratuita_y_gestiona_las_publicaciones_que_compartiras_en_ada_grupo_en_facebook"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignStart="@+id/textView5"
        android:background="@android:color/holo_green_light"
        android:elevation="0dp"
        android:text="@string/vamos"
        android:textColor="@android:color/white"
        tools:ignore="UnusedAttribute" />


</RelativeLayout>
